@@ -133,6 +133,7 @@ linux (5.10.26-1) UNRELEASED; urgency=medium
   * [rt] Update to 5.10.25-rt35
   * Refresh "Include package version along with kernel release in stack
     traces"
+  * Refresh "firmware: Remove redundant log messages from drivers"
 
   [ Uwe Kleine-König ]
   * [arm64] Enable various configurations for i.MX8 (Closes: #985862)
